-- Fixed alignment issue of requestor search header.

--- a/react-project/src/components/RequestWorkList/RequestorSearch/requestSearch.scss
+++ b/react-project/src/components/RequestWorkList/RequestorSearch/requestSearch.scss
@@ -23,6 +23,7 @@
 	padding: 5px;
 	min-height: 55px;
 	.upload-inner-container{
+		margin-bottom: 10px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
